Fix spacing

--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ section article{
 .profile-picture{
 	width: 123px;
   margin: auto 22%;
+	padding: 20px;
 }
 
 /********************
